--- a/src/vars.scss
+++ b/src/vars.scss
@@ -13,6 +13,7 @@ $white: #fff;
 $white--variation-1: #f2f2f2;
 $violet: rgba(96, 102, 208, 0.8);
 $dark-blue: #1d355d;
+$dark-blue--variation-1: #2F527B;
 
 // misc
 $green: rgb(135 205 155);
