--- a/src/components/QuizQuestion.scss
+++ b/src/components/QuizQuestion.scss
@@ -65,7 +65,7 @@
                 justify-content: flex-start;
                 align-items: center;
                 height: 3.5rem;
-
+                text-align: left;
                 font-size: 1.125rem;
                 font-style: normal;
                 font-weight: 500;
